--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: AnharmoniC and exChangE interactions in Phonon specTra
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Home page for Grant ANR-19-CE24-0028 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
