--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: AnharmoniC and exChangE interactions in Phonon specTra
 logo: /assets/img/logo.png
-description: Home page for Grant ANR-19-CE24-0028 
+description: Home page for ANR-19-CE24-0028 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
