--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: AnharmoniC and exChangE interactions in Phonon specTra
+title: ACCEPT
 logo: /assets/img/logo.png
 description: Home page for ANR-19-CE24-0028 
 show_downloads: true
