--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ACCEPT
-logo: /assets/img/logo.png
+logo: /assets/img/anr-logo-2021.png
 description: Home page for ANR-19-CE24-0028 
 show_downloads: true
 google_analytics:
